--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer id="footer">
   <div class="inner">
-    <section>
+    <!--<section>
       <h2>Get in touch</h2>
       <form method="post" action="http://formspree.io/{{ site.email }}">
         <div class="field half first">
@@ -16,9 +16,9 @@
           <li><input type="submit" value="Send" class="special" /></li>
         </ul>
       </form>
-    </section>
+    </section>-->
     <section>
-      <h2>Follow</h2>
+      <!--<h2>Follow</h2>-->
       <ul class="icons">
         {% if site.twitter %}
           <li><a href="https://twitter.com/{{ site.twitter }}" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
@@ -46,7 +46,8 @@
       </ul>
     </section>
     <ul class="copyright">
-      <li>&copy; {{ site.copyright }}. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+      <li><a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a></li>
+      <li>Design based on <a href="http://html5up.net">HTML5 UP</a></li>
     </ul>
   </div>
 </footer>
