--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header id="header">
   <div class="inner">
     <!-- Logo -->
-      <a href="{{ site.baseurl }}/" class="logo">
-        <span class="symbol"><img src="{{ site.baseurl }}/images/logo.svg" alt="" /></span><span class="title">{{ site.title }}</span>
+      <a href="{{ site.baseurl }}/" class="logo" style="font-size:0px; width:212px; height:60px; background:url({{ site.baseurl }}/images/scoda-horizontal-212x60-nontransparent.png) no-repeat">
+        <span class="title">{{ site.title }}</span>
       </a>
     <!-- Nav -->
       <nav>
