--- a/sass/base/_page.scss
+++ b/sass/base/_page.scss
@@ -26,6 +26,8 @@
 	body {
 		background: _palette(bg);
 
+		font-size: 110%;
+
 		// Prevents animation/transition "flicker" on page load.
 		// Automatically added/removed by js/main.js.
 			&.is-loading {
