--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,6 +4,11 @@
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
 
+/* FontAwesome  */
+
+.fa { color:white; }
+.fa-circle { color:#00aff0; }
+
 /* Type */
 
 	body, input, select, textarea {
@@ -77,7 +82,6 @@
 		font-weight: _font(weight-bold);
 		line-height: 1.5;
 		margin: 0 0 (_size(element-margin) * 1) 0;
-		text-transform: uppercase;
 		letter-spacing: _font(letter-spacing);
 
 		a {
@@ -86,23 +90,23 @@
 	}
 
 	h2 {
-		font-size: 1.1em;
+		font-size: 2em;
 	}
 
 	h3 {
-		font-size: 1em;
+		font-size: 1.6em;
 	}
 
 	h4 {
-		font-size: 0.8em;
+		font-size: 1.4em;
 	}
 
 	h5 {
-		font-size: 0.8em;
+		font-size: 1.2em;
 	}
 
 	h6 {
-		font-size: 0.8em;
+		font-size: 1em;
 	}
 
 	@include breakpoint(medium) {
