--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -14,7 +14,10 @@
 	#header {
 		@include padding(5em, 0, (3em, 0, -5em, 0));
 
-		background: #00aff0;
+		background: #00aff0 url(../images/alpsup.jpg) no-repeat;
+    background-size: auto 120%;
+    background-position: center;
+
 		color: white;
 
 		.logo {
