Added language tags, footer partners

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,22 +1,13 @@
 <footer id="footer">
   <div class="inner">
-    <!--<section>
-      <h2>Get in touch</h2>
-      <form method="post" action="http://formspree.io/{{ site.email }}">
-        <div class="field half first">
-          <input type="text" name="name" id="name" placeholder="Name" />
-        </div>
-        <div class="field half">
-          <input type="email" name="email" id="email" placeholder="Email" />
-        </div>
-        <div class="field">
-          <textarea name="message" id="message" placeholder="Message"></textarea>
-        </div>
-        <ul class="actions">
-          <li><input type="submit" value="Send" class="special" /></li>
-        </ul>
-      </form>
-    </section>-->
+    <section class="partners">
+      <a href="http://opendata.ch/" target="_blank" rel="me" style="border:none">
+        <img src="https://make.opendata.ch/files/2013/01/Opendata.ch_.png" alt="Opendata.ch" title="Daten öffentlich, frei verfügbar und nutzbar zu machen für mehr Transparenz, Innovation und Effizienz — das ist Open Data.">
+      </a>
+      <a href="http://okfn.org" target="_blank" rel="me" style="border:none;margin-left:30px">
+        <img src="https://opendata.ch/files/2014/07/open-knowledge-switzerland-logo-180px.png" width="120px">
+      </a>
+    </section>
     <section>
       <!--<h2>Follow</h2>-->
       <ul class="icons">
