--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,12 @@
 	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+	{% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
+		{% for post in posts %}
+			<link rel="alternate" hreflang="{{ post.lang }}" href="{{ post.url }}" />
+		{% endfor %}
+	{% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
+	{% for page in pages %}
+		<link rel="alternate" hreflang="{{ page.lang }}" href="{{ page.url }}" />
+	{% endfor %}
 </head>
