--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
 <nav id="menu">
   <h2>Menu</h2>
   <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="https://forum.schoolofdata.ch">Forum</a></li>
     {% for my_page in site.pages %}
       {% if my_page.title %}
         <li><a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
