--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ html5up.net | @ajlkn
 Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 
-<html>
+<html lang="{{ page.lang }}">
   {% include head.html %}
   <body>
     <div id="wrapper">
