--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -23,3 +23,18 @@
 			}
 		}
 	}
+
+/* Top alert */
+
+	.page-flash {
+		position: absolute;
+		top: 0px;
+		left: 0px;
+		width: 100%;
+		height: 4em;
+		color: #07c;
+		text-align: center;
+		background: #fec;
+		font-weight: bold;
+		padding: 1em 0;
+	}
