--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,11 @@
 layout: default
 ---
 
-<article itemscope itemtype="http://schema.org/BlogPosting">
+<header>
 	<h1>{{ page.title }}</h1>
+</header>
+
+<article itemscope itemtype="http://schema.org/BlogPosting">
 	<p><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
 	{{ content }}
 </article>
