Added analytics support

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,5 +18,6 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
       {% include footer.html %}
     </div>
     {% include scripts.html %}
+    {% include analytics.html %}
   </body>
 </html>
