--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,5 +3,9 @@ layout: default
 ---
 
 <h1>{{ page.title }}</h1>
+{% if page.image contains '://' %}
+<span class="image main"><img src="{{ page.image }}" alt="" /></span>
+{% else %}
 <span class="image main"><img src="{{ site.baseurl }}/{{ page.image }}" alt="" /></span>
+{% endif %}
 {{ content }}
