--- a/sass/custom/_scoda.scss
+++ b/sass/custom/_scoda.scss
@@ -5,3 +5,11 @@
 #main article p img {
   max-width: 100%;
 }
+
+article blockquote {
+    padding-bottom: 0em;
+    padding-top: 0em;
+    font-size: 115%;
+    font-style: normal;
+    background-color: #f5f5f5;
+}
