--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,9 @@
     <section>
       <!--<h2>Follow</h2>-->
       <ul class="icons">
+        {% if site.forum %}
+        <li><a href="{{ site.forum }}" class="icon style2 fa-bullhorn"><span class="label">Forum</span></a></li>
+        {% endif %}
         {% if site.twitter %}
           <li><a href="https://twitter.com/{{ site.twitter }}" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
         {% endif %}
