Reorganised image, social content

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="inner">
     <!-- Logo -->
       <a href="{{ site.baseurl }}/" class="logo"
-         style="background:url({{ site.baseurl }}/images/scoda-horizontal-212x60-nontransparent_{{ page.lang }}.png) no-repeat scroll 0% 0% / 95% auto; font-size:0px; width:212px; height:60px">
+         style="background:url({{ site.baseurl }}/images/scoda-horizontal-212x60-nontransparent_{{ page.lang }}.png) no-repeat scroll 0% 0% / 100% auto">
         <span class="title">{{ page.title }}</span>
       </a>
     <!-- Nav -->
