--- a/sass/custom/_scoda.scss
+++ b/sass/custom/_scoda.scss
@@ -1,3 +1,11 @@
+#header .logo {
+  font-size: 0px;
+  width: 212px;
+  height: 60px;
+  top: -15px;
+  position: relative;
+}
+
 .tiles article > .image img {
   height: 12em;
 }
