--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 
+<div id="google_translate_element"></div><script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'de,fr,it', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  
 <header>
 	<h1>{{ page.title }}</h1>
 </header>
