--- a/_includes/calendar.html
+++ b/_includes/calendar.html
@@ -1,7 +1,7 @@
 <!-- https://codepen.io/loleg/pen/dyKReEr -->
 <div id='calendar'></div>
 <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.0.0/index.global.min.js'></script>
-<script src='https://cdn.jsdelivr.net/npm/@fullcalendar/google-calendar@6.0.0/index.global.min.js'></script><script  src="./script.js"></script>
+<script src='https://cdn.jsdelivr.net/npm/@fullcalendar/google-calendar@6.0.0/index.global.min.js'></script>
 <script language="JavaScript">
 document.addEventListener('DOMContentLoaded', function() {
 	var calendarEl = document.getElementById('calendar');
