--- a/_includes/calendar.html
+++ b/_includes/calendar.html
@@ -1,5 +1,5 @@
 <!-- https://codepen.io/loleg/pen/dyKReEr -->
-<div id='calendar'></div>
+<div id='calendar' style="max-height: 300px; overflow-x: hidden; overflow-y: auto; display: block;"></div>
 <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.0.0/index.global.min.js'></script>
 <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/google-calendar@6.0.0/index.global.min.js'></script>
 <script language="JavaScript">
